--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "mi-flora-config-schema.coffee"
   ],
   "license": "GPL-2.0",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "homepage": "https://github.com/rrooggiieerr/pimatic-mi-flora",
   "configSchema": "mi-flora-config-schema.coffee",
   "peerDependencies": {
     "pimatic": ">=0.8.0 <1.0.0",
-    "pimatic-ble": ">=0.9.*"
+    "pimatic-ble": ">=0.9.2"
   },
   "engines": {
     "node": ">0.8.x",
