--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "pimatic-mi-flora",
+  "name": "pimatic-ble-mi-flora",
   "description": "Gets information from Xiaomi Mi Flora devices",
   "author": "Rogier van Staveren <rogier@staveren.net>",
   "main": "mi-flora",
   "files": [
     "mi-flora.coffee",
     "README.md",
-    "mi-flora-config-schema.coffee"
+    "mi-flora-config-schema.coffee",
+    "device-config-schema.coffee"
   ],
   "license": "GPL-2.0",
-  "version": "0.0.5",
-  "homepage": "https://github.com/rrooggiieerr/pimatic-mi-flora",
+  "version": "0.0.6",
+  "homepage": "https://github.com/rrooggiieerr/pimatic-ble-mi-flora",
   "configSchema": "mi-flora-config-schema.coffee",
   "peerDependencies": {
     "pimatic": ">=0.8.0 <1.0.0",
@@ -19,5 +20,15 @@
   "engines": {
     "node": ">0.8.x",
     "npm": ">1.1.x"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rrooggiieerr/pimatic-ble-mi-flora.git"
+  },
+  "keywords": [
+    "pimatic"
+  ],
+  "bugs": {
+    "url": "https://github.com/rrooggiieerr/pimatic-ble-mi-flora/issues"
   }
 }
