--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "mi-flora.coffee",
     "README.md",
     "mi-flora-config-schema.coffee",
-    "device-config-schema.coffee"
+    "device-config-schema.coffee",
+    "LICENSE"
   ],
   "license": "GPL-2.0",
-  "version": "0.0.7",
+  "version": "0.0.9",
   "homepage": "https://github.com/rrooggiieerr/pimatic-ble-mi-flora",
   "configSchema": "mi-flora-config-schema.coffee",
   "peerDependencies": {
     "pimatic": ">=0.8.0 <1.0.0",
-    "pimatic-ble": ">=0.9.2"
+    "pimatic-ble": ">=0.9.3"
   },
   "engines": {
     "node": ">0.8.x",
